# termweb

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
